--- a/.env.sample
+++ b/.env.sample
@@ -2,4 +2,10 @@ TARGET_URL=
 TARGET_ID=
 API_URL=
 ACCESS_TOKEN=
+
+YOUTUBE_API_KEY=
+YOUTUBE_API_VERSION=
+CHANNEL_ID=
+CHANNEL_URL=
+
 JSON_FILE=tsucchy.json
