--- a/Pipfile
+++ b/Pipfile
@@ -7,8 +7,9 @@ verify_ssl = true
 
 [packages]
 requests = "*"
-beautifulsoup4 = "*"
 python-dotenv = "*"
+google-api-python-client = "*"
+beautifulsoup4 = "*"
 
 [requires]
 python_version = "3.8"
